# java-code-standards-mcp

./: .gitignore  CLAUDE.md  Dockerfile  README.md  apprunner.yaml  buildspec.yml  code-generation-workflow.md  ecs-task-definition.json  pyproject.toml  run.sh
src/: server.py  validators.py
src/rules/: __init__.py
